# PyEnzyme

./: .gitignore  .gitmodules  .pymon  .readthedocs.yaml  Dockerfile  LICENSE  README.md  Test.omex  citation.cff  main.py  monitor.db  pyenzyme_server.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  docs.yml  lint.yml  publish.yaml  remote-tests.yaml  test-publish.yaml  unit-tests.yaml
dev-examples/: Readme.md  enzml_legacy_to_v2.json  sbml_export_odes.py  sbml_export_reactions.py  sbml_import_legacy.py  sbml_import_odes.py  sbml_import_reactions.py  v1.xml
dev-examples/legacy/: enzml_legacy_to_v2.json
dev-examples/odes/: enzymeml.json  ode_example.omex  odes_example.omex  odes_example.xml  odes_example_test.xml  sbml.xml
dev-examples/reactions/: data.tsv  enzymeml.json  reactions_example.omex  reactions_example.xml  sbml.xml
docs/: astro.config.mjs  conf.py  core.rst  index.rst  installation.md  models.rst  package-lock.json  package.json  requirements.txt
docs/_apiref/: pyenzyme.enzymeml.core.abstract_classes.rst  pyenzyme.enzymeml.core.complex.rst  pyenzyme.enzymeml.core.creator.rst  pyenzyme.enzymeml.core.enzymereaction.rst  pyenzyme.enzymeml.core.exceptions.rst  pyenzyme.enzymeml.core.measurement.rst  pyenzyme.enzymeml.core.protein.rst  pyenzyme.enzymeml.core.reactant.rst  pyenzyme.enzymeml.core.rst  pyenzyme.enzymeml.core.unitdef.rst  pyenzyme.enzymeml.core.utils.rst  pyenzyme.enzymeml.core.vessel.rst  pyenzyme.enzymeml.databases.dataverseMapping.rst  pyenzyme.enzymeml.databases.rst  pyenzyme.enzymeml.models.kineticmodel.rst  pyenzyme.enzymeml.models.rst  pyenzyme.enzymeml.rst  pyenzyme.restful.addModel_schema.rst  pyenzyme.restful.create.rst  pyenzyme.restful.createValidate.rst  pyenzyme.restful.exportData_schema.rst  pyenzyme.restful.template.rst  pyenzyme.restful.template_schema.rst  pyenzyme.restful.validate_schema.rst  pyenzyme.rst  pyenzyme.thinlayers.TL_Copasi.rst
docs/_examples/: 01_KineticModeling_PySCeS.ipynb  01_KineticModeling_PySCeS.rst  EnzymeML_Lagerman.omex  EnzymeML_Lagerman_init_values.yaml  EnzymeML_Lagerman_init_values_.yaml
docs/_getstarted/: 01_BasicUsage.ipynb  01_BasicUsage.rst  01_Overview.ipynb  02_Validation.ipynb  02_Validation.rst  03_Visualisation.ipynb  03_Visualisation.rst  04_UploadToDataverse.ipynb  04_UploadToDataverse.rst  EnzymeML_Template_Example.xlsm  My_Experiment.json  (+5 more)
examples/: Basic.ipynb  KineticModelling.ipynb  KineticModellingCOPASI.ipynb
prof/: test_example_3IZNOK_Simulated.prof  test_example_ENO.prof  test_example_Model4.prof  test_write.prof
pyenzyme/: __init__.py  composer.py  logging.py  model.py  poem.py  pretty.py  rdf.py  suite.py  tabular.py  tools.py  widgets.py  xmlutils.py
spreadsheets/: EnzymeML_Template_V2.xlsm
static/: upload.html  validation_upload.html
templates/: EnzymeML_Template.xlsm  EnzymeML_Template_Example.xlsm  EnzymeML_Validation_Template.xlsx  EnzymeML_Validation_Template.yaml  EnzymeML_Validation_Template_V1.xlsx  Example.omex  ExportTutorial.html  ImportTutorial.html  TEST.omex  TL_ExportTemplate.ipynb  TL_ImportTemplate.ipynb  create_example.py
tests/: conftest.py  test_object.json  test_tl_copasi.py  write_test.omex
visualization/: Visualisierung_dash.py
xsd/: BAG.xsd  EnzymeML.xsd  EnzymeMLAnnot.xsd  RDF.xsd  SBML_Mod.xsd  sbml-mathml.xsd
(+627 files in other folders)
