[tool.poetry]
name = "pyenzyme"
version = "2.0.0"
description = ""
authors = ["Jan Range <range.jan@web.de>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-libsbml = "^5.20.2"
toml = "^0.10.2"
rich = "^13.7.1"
pandas = ">=2.0.0"
pydantic-xml = "^2.17.0"
loguru = "^0.7.2"
rdflib = "7.0.0"
sympy = "^1.12.1"
pymetadata = "^0.5.3"
httpx = ">=0.27"
mdmodels = "^0.2.1"
joblib = "^1.5.0"
bokeh = "^3.7.3"

[tool.poetry.group.psyces.dependencies]
pysces = "^1.2.3"
lmfit = "^1.3.3"

[tool.poetry.group.excel.dependencies]
openpyxl = "^3.1.4"

[tool.poetry.group.tests.dependencies]
openpyxl = "^3.1.4"
pytest = "^8.2.2"
pytest-httpx = "^0.35.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
