[tool.poetry]
name = "pyenzyme"
version = "2.2.0"
description = "A Python library for EnzymeML"
authors = ["Jan Range <range.jan@web.de>"]
license = "BSD 2-Clause License"
readme = "README.md"
repository = "https://github.com/EnzymeML/pyenzyme"

[tool.poetry.dependencies]
python = "^3.10"
python-libsbml = "^5.20.2"
rich = "^13.7.1"
pandas = ">=2.0.0"
pydantic-xml = "^2.17.0"
loguru = "^0.7.2"
rdflib = "7.0.0"
sympy = "^1.12.1"
fastobo = "^0.13.0"
pymetadata = "^0.5.3"
httpx = ">=0.27"
mdmodels = "^0.2.1"
joblib = "^1.5.0"
bokeh = "^3.7.3"
matplotlib = "^3.10"
dill = ">=0.3.9,<0.5.0"

[tool.poetry.group.psyces.dependencies]
pysces = "^1.2.3"
lmfit = "^1.3.3"

[tool.poetry.group.excel.dependencies]
openpyxl = "^3.1.4"

[tool.poetry.group.tests.dependencies]
openpyxl = "^3.1.4"
pytest = "^8.2.2"
pytest-httpx = "^0.35.0"


[tool.poetry.group.v1.dependencies]
seaborn = "^0.13.2"
numexpr = "^2.11.0"
python-libcombine = "^0.2.20"
deepdiff = "^8.5.0"
deprecation = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
