[project]
name = "pyenzyme"
version = "2.2.1"
description = "A Python library for EnzymeML"
authors = [{ name = "Jan Range", email = "range.jan@web.de" }]
requires-python = ">=3.11,<4"
readme = "README.md"
license = { text = "BSD-2-Clause" }
dependencies = [
    "python-libsbml>=5.20.2,<6",
    "rich>=13.7.1,<14",
    "pandas>=2.0.0",
    "pydantic-xml>=2.17.0,<3",
    "loguru>=0.7.2,<0.8",
    "rdflib==7.0.0",
    "sympy>=1.12.1,<2",
    "fastobo>=0.13.0,<0.14",
    "pymetadata>=0.5.3,<0.6",
    "httpx>=0.27",
    "mdmodels>=0.2.4,<0.3",
    "joblib>=1.5.0,<2",
    "bokeh>=3.7.3,<4",
    "matplotlib>=3.10,<4",
    "dill>=0.3.9,<0.5.0",
]

[project.urls]
Repository = "https://github.com/EnzymeML/pyenzyme"

[dependency-groups]
psyces = ["pysces>=1.2.3,<2", "lmfit>=1.3.3,<2"]
excel = ["openpyxl>=3.1.4,<4"]
tests = [
    "pytest>=8.2.2,<9",
    "pytest-httpx>=0.35.0,<0.36",
    "pytest-sugar>=1.1.1",
]
v1 = [
    "seaborn>=0.13.2,<0.14",
    "numexpr>=2.11.0,<3",
    "python-libcombine>=0.2.20,<0.3",
    "deepdiff>=8.5.0,<9",
    "deprecation>=2.1.0,<3",
]
copasi = ["copasi-basico>=0.85"]

[tool.uv]
default-groups = ["excel"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
explicit = true
name = "testpypi"
publish-url = "https://test.pypi.org/legacy/"
url = "https://test.pypi.org/simple/"
